--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,1 @@
-mongodb+srv://niladrinandy2names:SIsXzfQH3p7ML7IU@cluster0.2y9xh8w.mongodb.net/?retryWrites=true&w=majority
+Mongo_Url = "mongodb+srv://niladrinandy2names:SIsXzfQH3p7ML7IU@cluster0.2y9xh8w.mongodb.net/OmniBlog?retryWrites=true&w=majority"
