--- a/api/package.json
+++ b/api/package.json
@@ -4,6 +4,16 @@
     "express": "^4.18.2",
     "mongodb": "^6.1.0",
     "mongoose": "^7.5.3",
-    "multer": "^1.4.5-lts.1"
-  }
+    "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.0.1"
+  },
+  "name": "api",
+  "version": "1.0.0",
+  "description": "Backend of the OmniBlog application",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon index.js"
+  },
+  "author": "Niladri Nandy",
+  "license": "ISC"
 }
